...
        services.locationService.stopUpdatingLocation()
    }

    private func displayableError(_ error: Error) -> String {
        if let e = error as? WeatherServiceError {
            switch e {
            case .missingApiKey: return "Missing API key"
            case .invalidResponse: return "Invalid response"
            case .decodingError: return "Decoding error"
            case .networkError(let err): return err.localizedDescription
            case .geocodeNotFound: return "Location not found"
            }
        }
...
